scrollbar fixed

--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,16 @@
     padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
-/* /common */
+
 .wrapper {
     width: 100%;
     height: 100vh;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+/* /common */
 /* main */
 main {
     display: flex;
